--- a/01_introduccion_a_django.ipynb
+++ b/01_introduccion_a_django.ipynb
@@ -55,44 +55,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Instalación en CentOS 7.\n",
-    "\n",
-    "A partir de *Django 2.2*, es necesario que el sistema en el que se instale cuente con una versión de *sqlite* que no está soportada por RHEL 7 ni por CentOS 7, , por lo que es necesario instalar *Django 2.1.1*.\n",
-    "\n",
-    "**Nota:** La máquina virtual proporcionada por Pythonista<sup>®</sup> está basada en CentOS 7, por lo que sólo podrá instalar , por lo que es necesario instalar *Django 2.1.1*."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Ejemplo:**\n",
-    "\n",
-    "La siguiente celda instalará *Django 2.1.1.* en el entorno virtual contenido en la Máquina Virtual proporcionada por Pythonista<sup>®</sup> en https://pythonista.io/descargas/base/view."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "! pip install django==2.1.1"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Instalación en otras plataformas.\n",
-    "\n",
-    "En el caso de las distribuciones de GNU/Linux como Ubuntu, Debian, etc.; Windows 10 y MacOS X, es posible instalar la versión más reciente de Django."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "**Ejemplo:**\n",
     "\n",
     "La siguiente celda instalará la versión más reciente de *Django*.\n",
@@ -471,12 +433,12 @@
     "```\n",
     "o\n",
     "```\n",
-    "python manage.py runserver <rango de transmisión>:<puerto>\n",
+    "python manage.py runserver <máscara transmisión>:<puerto>\n",
     "```\n",
     "\n",
     "Donde:\n",
     "\n",
-    "* ```<rango de transmisión>``` corresponde a una máscara IP, un dominio o un host que serán las direcciones autorizadas para acceder al servidor de *Django*. \n",
+    "* ```<máscara de transmisión>``` corresponde a una máscara IP, un dominio o un host que serán las direcciones autorizadas para acceder al servidor de *Django*. \n",
     "* ```<puerto>``` corresponde al número de puerto desde el cual será accesible el servidor de *Django*.\n",
     "\n",
     "**Notas:**\n",
@@ -490,32 +452,66 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A continuación se ejecutará el servidor web de *Django*, el cual desplegará la página que se genera por defecto.\n",
+    "### Arranque desde una terminal.\n",
     "\n",
-    "El servidor de *Django* usando la máscara ``` '0.0.0.0'``` en el puerto ```5000```.\n",
+    "* Desde una terminal diríjase al directorio ```tutorial```, en el cual se encuentra el script ```manage.py```.\n",
+    "* Ejecute el siguiente comando:\n",
+    "\n",
+    "\n",
+    "```\n",
+    "python manage.py runserver 0.0.0.0:8000\n",
+    "```\n",
     "\n",
     "**Nota:** \n",
-    "Es necesario que el firewall de su equipo esté configurado para transmitir desde el puerto ```5000```. \n",
-    "\n",
-    "**ADVERTENCIA:** Al ejecutar la siguiente celda, el servidor se inciará desde la notebook, por lo que para ejecutar cualquier otra celda, deberá interrumpir la ejecución del kernel."
+    "Es necesario que el firewall de su equipo esté configurado para transmitir desde el puerto ```8000```. "
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
    "source": [
-    "%run manage.py runserver 0.0.0.0:5000"
+    "Una vez ejecuatdo dicho comando, la terminal regresará algo similar a lo siguiente:\n",
+    "\n",
+    "``` \n",
+    "Watching for file changes with StatReloader\n",
+    "Performing system checks...\n",
+    "\n",
+    "System check identified no issues (0 silenced).\n",
+    "\n",
+    "You have 17 unapplied migration(s). Your project may not work properly until you apply the migrations for app(s): admin, auth, contenttypes, sessions.\n",
+    "Run 'python manage.py migrate' to apply them.\n",
+    "\n",
+    "November 07, 2019 - 04:21:12\n",
+    "Django version 2.2.7, using settings 'tutorial.settings'\n",
+    "Starting development server at http://0.0.0.0:8000/\n",
+    "Quit the server with CONTROL-C.\n",
+    "^C\n",
+    "```"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "El resultado puede ser visto desde http://localhost:5000"
+    "Lo anterior indicaría que el servidor inició correctamente y el servicio puede ser accedido desde http://localhost:8000. El navegador desplegaría algo similar a la siguiente imagen:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"imagenes/01/inicio.png\" width=\"700px\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Finalización de la ejecución del servicio.\n",
+    "\n",
+    "Para detener la ejecución del servidor es necesario teclear <kbd>Ctrl</kbd><kbd>C</kbd>"
    ]
   },
   {
@@ -543,7 +539,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
