--- a/02_el_protocolo_http.ipynb
+++ b/02_el_protocolo_http.ipynb
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Creado por [Tim Berners-Lee](https://es.wikipedia.org/wiki/Tim_Berners-Lee) en 1989, es el protocolo utilizado para acceder y publicar en la World Wide Web (o  web).\n",
+    "Creado por [Tim Berners-Lee](https://es.wikipedia.org/wiki/Tim_Berners-Lee) en 1989, es el protocolo utilizado para acceder y publicar en la *World Wide Web*, o simplemente la web.\n",
     "Significa Protocolo de transmisión de hipertexto.\n",
     "\n",
     "Actualmente el [World Wide Web Consortium (*W3C*)](https://www.w3.org) es la entidad encargada, entre otras cosas, de publicar la especificación del protocolo *HTTP*. La versión más reciente es *HTTP/2*, pero la mayoría de los servidores utilizan la versión *HTTP/1.1*.\n",
@@ -142,21 +142,7 @@
     "\n",
     "El paquete [```requests```](https://requests.kennethreitz.org/en/master/)  permite hacer peticiones mediante funciones que emulan los métodos del protocolo *HTTP*, regresando un objeto de Python que contiene los mensajes y datos de la respuesta del servidor a modo de atributos.\n",
     "\n",
-    "```\n",
-    "requests.<metodo>('<URL>, <argumentos>')\n",
-    "```\n",
-    "\n",
-    "\n",
-    "\n",
-    "El paquete *requests* presenta funcionalidades avanzadas como autenticación, conexiones seguras, manejo de 'cookies', etc. \n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Ejemplo:**"
+    "El paquete *requests* presenta funcionalidades avanzadas como autenticación, conexiones seguras, manejo de 'cookies', etc. "
    ]
   },
   {
@@ -181,9 +167,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Funciones de métodos de ```requests```.\n",
+    "\n",
+    "El paquete ```requests``` contiene varias funciones que pueden enviar peticiones a una *URL* utilizando un método en particular de la siguiente manera:\n",
+    "\n",
+    "```\n",
+    "requests.<funcion de método>('<URL>', <argumentos>)\n",
+    "```\n",
+    "\n",
+    "Estas funciones pueden ser:\n",
+    "\n",
+    "* ```requests.get()```, la cual accederá a una *URL* utilizando el método ```GET```.\n",
+    "* ```requests.head()```, la cual accederá a una *URL* utilizando el método ```HEAD```.\n",
+    "* ```requests.post()```, la cual accederá a una *URL* utilizando el método ```POST```.\n",
+    "* ```requests.put()```, la cual accederá a una *URL* utilizando el método ```PUT```.\n",
+    "* ```requests.patch()```, la cual accederá a una *URL* utilizando el método ```PATCH```.\n",
+    "* ```requests.delete()```, la cual accederá a una *URL* utilizando el método ```DELETE```.\n",
+    "* ```requests.connect()```, la cual accederá a una *URL* utilizando el método ```CONNECT```.\n",
+    "* ```requests.options()```, la cual accederá a una *URL* utilizando el método ```OPTIONS```.\n",
+    "* ```requests.trace()```, la cual accederá a una *URL* utilizando el método ```TRACE```.\n",
+    "\n",
+    "Del mismo modo, al recibir la respuesta del servidor, la función regresará a un objeto de tipo ```requests.models.Response```."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**Ejemplo:**\n",
     "\n",
-    "* Se utilizará la función ```requests.get()``` en la *URL* https://pythonista.io/cursos para abir una conexión enviando una petición ```GET```  y el objeto resultante será nombrado ```sitio```."
+    "* Se utilizará la función ```requests.get()``` en la *URL* https://coder.mx para abir una conexión enviando una petición ```GET```  y el objeto resultante será nombrado ```sitio```."
    ]
   },
   {
@@ -192,7 +205,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sitio = requests.get(\"https://pythonista.io/cursos\") "
+    "sitio = requests.get(\"https://coder.mx\") "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* El objeto sitio es una instancia de la clase ```requests.models.Response```."
    ]
   },
   {
@@ -201,7 +221,46 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dir(sitio)"
+    "type(sitio)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## La clase ```requests.models.Response```."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Principales atributos de los objetos de tipo ```requests.models.Response```.\n",
+    "\n",
+    "* ```headers```\n",
+    "* ```status_code```\n",
+    "* ```reason```\n",
+    "* ```url```\n",
+    "* ```content```\n",
+    "* ```encoding```\n",
+    "* ```text```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Principales métodos de los objetos de tipo ```requests.models.Response```.\n",
+    "\n",
+    "* ```close()```\n",
+    "* ```json()```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Ejemplos:**"
    ]
   },
   {
@@ -219,25 +278,53 @@
    },
    "outputs": [],
    "source": [
-    "print(sitio.headers)"
+    "sitio.headers"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sitio.headers['Content-Type']"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* El mensaje de estado resultante contenido en el atributo ```sitio.status_code```."
+    "* El código de estado resultante contenido en el atributo ```sitio.status_code```."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
-    "print(sitio.status_code)"
+    "sitio.status_code"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sitio.reason"
    ]
   },
   {
@@ -248,12 +335,44 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(sitio.content)"
+    "sitio.url"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "sitio.content"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* La siguiente celda desplegará codificación de la respuesta."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sitio.encoding"
    ]
   },
   {
@@ -267,11 +386,38 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [],
    "source": [
-    "print(sitio.text)"
+    "sitio.text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from IPython.display import HTML "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "HTML(sitio.text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "HTML(str(sitio.content, encoding=\"UTF-8\"))"
    ]
   },
   {
@@ -288,65 +434,6 @@
    "outputs": [],
    "source": [
     "sitio.close()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Ejemplo:**\n",
-    "\n",
-    "Se creará  la función ```get_url()``` la cual utilizará a la función ```requests.get()``` para abir una conexión enviando una petición ```GET```. \n",
-    "\n",
-    "La función ```get_url()``` regresará un objeto de tipo ```tuple```  con los siguientes datos:\n",
-    "\n",
-    "* El mensaje de estado resultante contenido en ```sitio.status_code```.\n",
-    "* El contenido del atributo ```sitio.content```."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_url(url):\n",
-    "    with requests.get(url) as sitio:\n",
-    "        return sitio.status_code, sitio.content"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* Se aplicará la función ```get_url()``` para la *URL* [https://pythonista.io](https://pythonista.io)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "get_url(\"https://pythonista.io\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* Se aplicará la función ```get_url()``` para la *URL* https://pythonista.io/cur, la cual no existe."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "get_url(\"https://pythonista.io/cur\")"
    ]
   },
   {
@@ -457,7 +544,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Para desplegar una imagen se utilziará el módulo ```IPython.Display.Image``` de IPython."
+    "* Para desplegar una imagen se utilziará el módulo ```IPython.Display.Image``` de *IPython*."
    ]
   },
   {
@@ -548,18 +635,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Gestión de respuestas con cotenido en formato *JSON*.\n",
+    "\n",
     "* El objeto ```respuesta``` contiene al método ```json()```, el cual regresa un objeto tipo ```dict``` con información obtenida de una respuesta enviada en *JSON*.\n",
     "\n",
-    "**Advertencia:** Este método sólo se puede ejecutar cuando el servidor envía una respuesta en formato *JSON*."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "respuesta.json()"
+    "* Las"
    ]
   },
   {
@@ -569,6 +649,15 @@
    "outputs": [],
    "source": [
     "respuesta_json = respuesta.json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "respuesta_json"
    ]
   },
   {
@@ -614,7 +703,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
