--- a/03_configuracion_de_un_proyecto.ipynb
+++ b/03_configuracion_de_un_proyecto.ipynb
@@ -231,7 +231,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## La variable ```settings.INSTALLED_APPS```.\n",
+    "### La variable ```settings.INSTALLED_APPS```.\n",
     "\n",
     "Esta variable define a las diversas aplicaciones que puede utilizar el proyecto.\n",
     "\n",
@@ -339,7 +339,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
