--- a/05_urls_y_funciones_de_vista.ipynb
+++ b/05_urls_y_funciones_de_vista.ipynb
@@ -150,7 +150,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### El paquete ```django.contrib.admin```.\n",
+    "### El paquete ```django.contrib.admin```.\n",
     "\n",
     "Este paquete contiene un conjunte de herramientas capaces de desplegar un sitio de administración del proyecto.\n",
     "\n",
@@ -192,7 +192,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### La función ```django.urls.path()```.\n",
+    "### La función ```django.urls.path()```.\n",
     "\n",
     "Esta función permite relacionar a un patrón de *URL* a una función.\n",
     "\n",
@@ -211,7 +211,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### La función ```django.urls.include()```.\n",
+    "### La función ```django.urls.include()```.\n",
     "\n",
     "Por convención, se utliza el nombre ```include``` cuando se desea importar algún archivo como un módulo de forma similar a la palabra reservada de Python ```import```. \n",
     "\n",
@@ -585,7 +585,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
